--- a/Grades2/Grades2.csproj
+++ b/Grades2/Grades2.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{CF80593D-DBB2-41FF-8468-FAE1499A63FD}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Grades2</RootNamespace>
+    <RootNamespace>Grades</RootNamespace>
     <AssemblyName>Grades2</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -47,6 +47,7 @@
     <Compile Include="NameChangedDelegate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThrowAwayGradeBook.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
