--- a/Grades2/Grades2.csproj
+++ b/Grades2/Grades2.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="GradeBook.cs" />
     <Compile Include="GradeStatistics.cs" />
+    <Compile Include="GradeTracker.cs" />
+    <Compile Include="IGradeTracker.cs" />
     <Compile Include="NameChangedDelegate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
